--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   font-weight: 400;
   line-height: normal;
   box-sizing: border-box;
+  border: 1px solid yellow;
 }
 
 html {
@@ -20,4 +21,21 @@ body {
   font-size: 1rem;
   background: url("../images/background.jpg") no-repeat center center fixed;
   background-size: cover;
+  font-size: 2rem;
+  color: yellow;
+}
+
+img {
+  width: 100%;
+}
+
+.wrapper__line {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.wrapper__item {
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
