added basic markup for the “sun” object

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,11 @@ img {
   text-align: center;
 }
 
+.wrapper__block {
+  display: flex;
+  flex-direction: row;
+}
+
 .main-object {
   display: inline-block;
   width: 50%;
