--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,18 @@ body {
   color: yellow;
 }
 
+img {
+  width: 100%;
+}
+
+.wrapper {
+  padding: 2%;
+}
+
 .wrapper__line {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100%;
 }
 
 .wrapper__item {
@@ -42,21 +49,34 @@ body {
   flex-direction: row;
 }
 
-img.sun_body {
-  width: 60%;
-  z-index: 99;
-}
-
 .wrapper__item--body {
+  width: 50%;
+  display: flex;
   position: relative;
+  justify-content: center;
+  z-index: 49;
 }
-
-.sun_body:hover {
+.wrapper__item--body .element-body-up {
+  width: 22%;
+  position: absolute;
+  top: 35%;
+  z-index: 50;
+}
+.wrapper__item--body .element-body-down {
+  width: 100%;
+  position: absolute;
+  bottom: 35%;
+  z-index: 50;
+}
+.wrapper__item--body .element-body-down img.sun_mouth {
+  width: 20%;
+  transform: scaleX(-1);
+}
+.wrapper__item--body .sun_body:hover {
   animation-name: rotate;
   animation-duration: 90s;
   animation-iteration-count: infinite;
 }
-
 @keyframes rotate {
   0% {
     transform: rotate(0);
@@ -65,25 +85,62 @@ img.sun_body {
     transform: rotate(5200deg);
   }
 }
-.element-body-up {
-  width: 100%;
-  position: absolute;
-  top: 35%;
-  z-index: 50;
-}
-.element-body-up img.sun_eyes {
-  width: 12%;
+
+.wrapper__line--mod {
+  display: flex;
+  justify-content: center;
 }
 
-.element-body-down {
-  width: 100%;
-  position: absolute;
-  bottom: 35%;
+.wrapper__item--hand-right {
+  padding-top: 35%;
+  width: 15%;
+  left: 7%;
+  transition: all 0.5s;
+}
+
+.wrapper__item--hand-left {
+  padding-top: 35%;
+  width: 15%;
+  right: 7%;
+  transition: all 0.5s;
+}
+
+.right_hand_four {
+  rotate: -75deg;
+}
+
+.left_hand_four {
+  transform: scaleX(-1);
+  rotate: 75deg;
+}
+
+.left_hand_like {
+  transform: scaleX(-1);
+}
+
+.wrapper__block-right_hand_like,
+.wrapper__block-left_hand_like {
+  display: none;
+}
+
+.wrapper__item--hand-right:active .wrapper__block-right_hand_four,
+.wrapper__item--hand-left:active .wrapper__block-left_hand_four {
+  display: none;
+}
+
+.wrapper__item--hand-right:active .wrapper__block-right_hand_like,
+.wrapper__item--hand-left:active .wrapper__block-left_hand_like {
+  display: block;
+}
+
+.wrapper__item--hand-right:active {
+  left: 17%;
   z-index: 50;
 }
-.element-body-down img.sun_mouth {
-  width: 12%;
-  transform: scaleX(-1);
+
+.wrapper__item--hand-left:active {
+  right: 17%;
+  z-index: 50;
 }
 
 img.speaker {
@@ -94,7 +151,7 @@ img.player {
   width: 50%;
   z-index: 49;
   position: absolute;
-  padding-top: 2%;
+  padding-top: 1.8%;
 }
 
 img.vinyl {
@@ -106,4 +163,19 @@ img.vinyl {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.vinyl:hover {
+  animation-name: rotate_vinyl;
+  animation-duration: 300s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes rotate_vinyl {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(-50200deg);
+  }
 }/*# sourceMappingURL=style.css.map */
