--- a/css/_sun.scss
+++ b/css/_sun.scss
@@ -12,19 +12,67 @@
         z-index: 50;
     }
 
-    .element-body-down {
-        width: 100%;
-        position: absolute;
-        bottom: 35%;
-        z-index: 50;
-
-        img.sun_mouth {
-            width: 20%;
-            transform: scaleX(-1);
-        }
+    .sun_eyes_up {
+        display: none;
     }
 
-    // rotation when pointing at an object
+    .sunglasses {
+        display: none;
+    }
+
+    .element-body-up:hover .sun_eyes_down {
+        display: none;
+    }
+
+    .element-body-up:hover .sun_eyes_up {
+        display: block;
+    }
+
+    .element-body-up:active .sun_eyes_up,
+    .element-body-up:active .sun_eyes_down {
+        display: none;
+    }
+
+    .element-body-up:active {
+        position: absolute;
+        width: 70%;
+        rotate: 8deg;
+        top: 26%;
+
+    }
+
+    .element-body-up:active .sunglasses {
+        display: block;
+    }
+
+    .element-body-down {
+        width: 20%;
+        position: absolute;
+        bottom: 32%;
+        z-index: 50;
+        transform: scaleX(-1);
+    }
+
+    .sun_mouth_angry {
+        display: none;
+    }
+
+    .element-body-down:active .sun_mouth_smile {
+        display: none;
+    }
+
+    .element-body-down:active .sun_mouth_angry {
+        display: block;
+    }
+
+    .element-body-down:active {
+        transform: scaleX(-1);
+        bottom: 35%;
+    }
+
+
+
+
     .sun_body:hover {
         animation-name: rotate;
         animation-duration: 90s;
@@ -48,14 +96,14 @@
 }
 
 .wrapper__item--hand-right {
-    padding-top: 35%;
+    padding-top: 33%;
     width: 15%;
     left: 7%;
     transition: all 0.5s;
 }
 
 .wrapper__item--hand-left {
-    padding-top: 35%;
+    padding-top: 33%;
     width: 15%;
     right: 7%;
     transition: all 0.5s;
@@ -97,6 +145,7 @@
     left: 17%;
     z-index: 50;
 }
+
 .wrapper__item--hand-left:active {
     right: 17%;
     z-index: 50;
