--- a/css/_global.scss
+++ b/css/_global.scss
@@ -11,7 +11,7 @@
     font-weight: 400;
     line-height: normal;
     box-sizing: border-box;
-    border: 1px solid yellow;
+    // border: 1px solid yellow;
 }
 
 html {
