added a player panel and changed the animation for vinyl

--- a/css/_player.scss
+++ b/css/_player.scss
@@ -1,5 +1,11 @@
 .wrapper__item--mod {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.wrapper__block-player {
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -14,25 +20,14 @@ img.player {
 img.vinyl {
     width: 40%;
     z-index: 51;
+    transition: all 300s;
 }
 
-
-.vinyl:hover {
-    animation-name: rotate_vinyl;
-    animation-duration: 300s;
-    animation-iteration-count: infinite;
-
-    @keyframes rotate_vinyl {
-        0% {
-            transform: rotate(0);
-        }
-
-        100% {
-            transform: rotate(-50200deg)
-        }
-    }
+.wrapper__block-player:hover .vinyl {
+    transform: rotateZ(50000deg);
+    transition: all 100s;
 }
 
-.vinyl:active {
-    width: 70%;
+.wrapper__block-player:active .vinyl {
+    transform: none;
 }
