added logos YOUTUBE and GOOGLE MAPS for the main page + links + styles

--- a/css/_sun.scss
+++ b/css/_sun.scss
@@ -70,9 +70,6 @@
         bottom: 35%;
     }
 
-
-
-
     .sun_body:hover {
         animation-name: rotate;
         animation-duration: 90s;
@@ -123,13 +120,10 @@
     transform: scaleX(-1);
 }
 
-
 .wrapper__block-right_hand_like,
 .wrapper__block-left_hand_like {
     display: none;
 }
-
-
 
 .wrapper__item--hand-right:active .wrapper__block-right_hand_four,
 .wrapper__item--hand-left:active .wrapper__block-left_hand_four {
@@ -143,10 +137,26 @@
 
 .wrapper__item--hand-right:active {
     left: 17%;
-    z-index: 50;
+    z-index: 51;
 }
 
 .wrapper__item--hand-left:active {
     right: 17%;
     z-index: 50;
+}
+
+.wrapper__item--youtube,
+.wrapper__item--google_maps {
+    width: 10%;
+}
+
+.wrapper__item--youtube:hover .wrapper__img--youtube,
+.wrapper__item--google_maps:hover .wrapper__img--google_maps {
+    background-color: #F6A900;
+}
+
+.wrapper__item--youtube:active .wrapper__img--youtube,
+.wrapper__item--google_maps:active .wrapper__img--google_maps {
+    width: 120%;
+    transition: all 0.5s;
 }
