added a new page and created two iframes in it for YouTube and Google Maps

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
   font-weight: 400;
   line-height: normal;
   box-sizing: border-box;
-  border: 1px solid yellow;
 }
 
 html {
@@ -226,4 +225,21 @@ img.vinyl {
 
 .wrapper__block-player:active .vinyl {
   transform: none;
+}
+
+iframe {
+  width: 55%;
+  height: 28vw;
+  border-radius: 30px;
+  border: 8px solid #000;
+  box-shadow: -5px -9px 13px 3px #142142;
+  margin-bottom: 2%;
+}
+
+.wrapper__img--back {
+  width: 40%;
+}
+
+.wrapper__img--back:hover {
+  width: 50%;
 }/*# sourceMappingURL=style.css.map */
