--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,15 @@ img {
 .wrapper__item--google_maps {
   width: 10%;
 }
+.wrapper__item--youtube .wrapper__img--youtube,
+.wrapper__item--youtube .wrapper__img--google_maps,
+.wrapper__item--google_maps .wrapper__img--youtube,
+.wrapper__item--google_maps .wrapper__img--google_maps {
+  padding: 0 10%;
+  border-radius: 30px;
+  border: 8px solid #000;
+  box-shadow: -5px -9px 13px 3px #142142;
+}
 
 .wrapper__item--youtube:hover .wrapper__img--youtube,
 .wrapper__item--google_maps:hover .wrapper__img--google_maps {
@@ -242,4 +251,5 @@ iframe {
 
 .wrapper__img--back:hover {
   width: 50%;
+  transition: all 0.5s;
 }/*# sourceMappingURL=style.css.map */
