--- a/css/_sun.scss
+++ b/css/_sun.scss
@@ -1,15 +1,14 @@
 .wrapper__item--body {
     width: 50%;
     display: flex;
-    position: relative;
     justify-content: center;
-    z-index: 50;
+    z-index: 51;
 
     .element-body-up {
         width: 22%;
         position: absolute;
         top: 35%;
-        z-index: 50;
+        z-index: 52;
     }
 
     .sun_eyes_up {
@@ -38,7 +37,6 @@
         width: 70%;
         rotate: 8deg;
         top: 26%;
-
     }
 
     .element-body-up:active .sunglasses {
@@ -49,7 +47,7 @@
         width: 20%;
         position: absolute;
         bottom: 32%;
-        z-index: 50;
+        z-index: 52;
         transform: scaleX(-1);
     }
 
@@ -70,11 +68,6 @@
         bottom: 35%;
     }
 
-    .sun_body:hover {
-        animation-name: rotate;
-        animation-duration: 90s;
-        animation-iteration-count: infinite;
-    }
 
     @keyframes rotate {
         0% {
@@ -82,9 +75,33 @@
         }
 
         100% {
-            transform: rotate(5200deg)
+            transform: rotate(5200deg);
         }
+
     }
+
+    .sun_body:hover {
+        animation: rotate;
+        animation-duration: 90s;
+        animation-iteration-count: infinite;
+    }
+}
+
+@keyframes jump {
+    0% {}
+
+    1% {
+        transform: translateY(200px);
+    }
+
+    100% {
+        transform: translateY(-50%);
+    }
+
+}
+
+.wrapper__item--body:active {
+    animation: jump 0.29s infinite alternate forwards;
 }
 
 .wrapper__line--mod {
@@ -92,18 +109,19 @@
     justify-content: center;
 }
 
-.wrapper__item--hand-right {
-    padding-top: 33%;
+.wrapper__item--hand-right,
+.wrapper__item--hand-left {
+    padding-top: 28%;
     width: 15%;
-    left: 7%;
     transition: all 0.5s;
 }
 
+.wrapper__item--hand-right {
+    left: 7%;
+}
+
 .wrapper__item--hand-left {
-    padding-top: 33%;
-    width: 15%;
     right: 7%;
-    transition: all 0.5s;
 }
 
 
@@ -137,35 +155,49 @@
 
 .wrapper__item--hand-right:active {
     left: 17%;
-    z-index: 51;
+    z-index: 52;
+    transform: scale(1.3);
 }
 
 .wrapper__item--hand-left:active {
     right: 17%;
-    z-index: 50;
+    z-index: 52;
+    transform: scale(1.3);
 }
 
 .wrapper__item--youtube,
 .wrapper__item--google_maps {
     width: 10%;
+
     .wrapper__img--youtube,
     .wrapper__img--google_maps {
         padding: 0 10%;
         border-radius: 30px;
         border: 8px solid #000;
         box-shadow: -5px -9px 13px 3px #142142;
-        
+        transition: all 0.5s;
     }
 
+    .wrapper__img--youtube {
+        float: left;
+    }
+
+    .wrapper__img--google_maps {
+        float: right;
+    }
 }
 
-.wrapper__item--youtube:hover .wrapper__img--youtube,
-.wrapper__item--google_maps:hover .wrapper__img--google_maps {
+.wrapper__item--youtube {
+    left: 6%;
+}
+
+.wrapper__item--google_maps {
+    right: 6%;
+}
+
+.wrapper__img--youtube:hover,
+.wrapper__img--google_maps:hover {
     background-color: #F6A900;
-}
-
-.wrapper__item--youtube:active .wrapper__img--youtube,
-.wrapper__item--google_maps:active .wrapper__img--google_maps {
-    width: 120%;
+    width: 140%;
     transition: all 0.5s;
 }
